# CoachBox

./: CMakeLists.txt  CoachBox.pro  README.md  custombtn.cpp  custombtn.h  res.qrc  slidepage.cpp  slidepage.h  subwindow.cpp  subwindow.h  tcpclient.cpp  tcpclient.h  window.cpp  window.h
config/: nubot.conf
rtdb/: CMakeLists.txt  comm.cpp  multicast.cpp  rtdb_api.cpp
rtdb/include/core/: core.hpp
rtdb/include/rtdb/: rtdb.ini  rtdb_defs.h  rtdb_user.h
rtdb/include/world_model/: MTTracker.h  ball.h  obstacles.h  robot.h  strategyinfo.h  teammatesinfo.h
